# audioread

./: .gitignore  .hgtags  .travis.yml  MANIFEST.in  README.md  README.rst  decode.py  derp.py  macca.py  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: main.yml  make_release.yaml
audioread/: __init__.py  ffdec.py  gstdec.py  macca.py  maddec.py  rawread.py  version.py
test/: conftest.py  test_audioread.py  test_ffdec.py  test_gstdec.py  test_macca.py  test_maddec.py  test_rawread.py
test/data/: test-1.json  test-2.json
test/fixtures/: README.md  make_test_wave.py  wavetest.wave
