[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "audioread"
authors = [
    {name = "Adrian Sampson", email = "adrian@radbox.org"}
]
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "audioop-lts; python_version >= '3.13'"
]
dynamic = ["version", "description"]
urls.Home = "https://github.com/beetbox/audioread"
classifiers = [
    'Topic :: Multimedia :: Sound/Audio :: Conversion',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: MIT License',
]
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
    "tox"
]
legacy = [
    "standard-aifc; python_version >= '3.13'",
    "standard-sunau; python_version >= '3.13'"
]
